--- a/style.css
+++ b/style.css
@@ -1,35 +1,45 @@
+body {
+  background-color: rgb(242, 242, 242);
+  text-align: center;
+}
+
 .color {
   border: 1px solid black;
 }
 
-#title {
-  text-align: center;
-}
-
-#color-palette {
-  text-align: center;
-}
-
-#color-one {
+#block-one {
   background-color: black;
   padding: 25px 25px 25px 25px;
   display: inline-block;
 }
 
-#color-two {
+#block-two {
   background-color: red;
   padding: 25px 25px 25px 25px;
   display: inline-block;
 }
 
-#color-three {
+#block-three {
   background-color: blue;
   padding: 25px 25px 25px 25px;
   display: inline-block;
 }
 
-#color-four {
+#block-four {
   background-color: green;
   padding: 25px 25px 25px 25px;
+  display: inline-block;
+}
+
+#pixel-board {
+  padding-top: 20px;
+}
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  margin: 0px -1px -5px 0px;
+  background-color: white;
   display: inline-block;
 }
