--- a/style.css
+++ b/style.css
@@ -9,25 +9,25 @@ body {
 
 #block-one {
   background-color: black;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
   display: inline-block;
 }
 
 #block-two {
   background-color: red;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
   display: inline-block;
 }
 
 #block-three {
   background-color: blue;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
   display: inline-block;
 }
 
 #block-four {
   background-color: green;
-  padding: 25px 25px 25px 25px;
+  padding: 25px;
   display: inline-block;
 }
 
@@ -39,7 +39,7 @@ body {
   border: 1px solid black;
   width: 40px;
   height: 40px;
-  margin: 0px -1px -5px 0px;
+  margin: 0 -1px -5px 0;
   background-color: white;
   display: inline-block;
 }
