--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   border: 1px solid black;
 }
 
-#block-one {
+#main-block {
   background-color: black;
   padding: 25px;
   display: inline-block;
